# Hypervisor-OG

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: aarch64-gcc.cmake
drivers/: CMakeLists.txt  Makefile
drivers/inc/driver/: aarch64.h  arm.h
drivers/inc/driver/aarch64/: at.h  cache.h  exception.h  mmu.h  mmu_base.h  mmu_stage2.h  psci.h  stage2.h  system_register.h
drivers/inc/driver/arm/: gic400.h  gic400_io.h  psci_common.h  psci_error.h  smmu500.h
drivers/inc/driver/system/: cpu.h
drivers/inc/driver/xilinx/: mpsoc.h
drivers/src/aarch64/: aarch64.S  aarch64_at_s1.S  aarch64_at_s12.S  aarch64_fiq.S  aarch64_interrupts.S  aarch64_irq.S  aarch64_lock.S  aarch64_udelay.S  system_register.S
drivers/src/aarch64/at/: aarch64_at_s1e2.S
drivers/src/aarch64/cache/: aarch64_dcache_clean.S  aarch64_dcache_clean_invd.S  aarch64_dcache_invd.S  aarch64_dcache_op_all.S  aarch64_dcache_op_range.S  aarch64_icache_invd.S  aarch64_poc_line_sz.S
drivers/src/aarch64/exception/: aarch64_esr_ec_message.c
drivers/src/aarch64/mmu/: aarch64_mmu_block_pool.c  aarch64_mmu_clear_block.S  aarch64_mmu_descriptor.c  aarch64_mmu_disable.S  aarch64_mmu_dump_descriptor.c  aarch64_mmu_enable.S  aarch64_mmu_enable.c  aarch64_mmu_enable_asm.S  aarch64_mmu_init.c  aarch64_mmu_initialize.c  aarch64_mmu_map.c  aarch64_mmu_map_4KB.c  aarch64_mmu_map_region.c  aarch64_mmu_memclr.S  aarch64_mmu_set_mair.c  aarch64_mmu_set_translation_table.c  aarch64_mmu_set_tt.c  aarch64_mmu_set_ttbr0.c  aarch64_mmu_stage2_descriptor.c  aarch64_mmu_stage2_enable.c  aarch64_mmu_stage2_init.c  aarch64_mmu_stage2_map.c  aarch64_mmu_tlbi_all.S  aarch64_mmu_tlbi_va.S  aarch64_mmu_write_descriptor.S  aarch64_mmu_write_tt.S  mmu_local.h
drivers/src/aarch64/psci/: aarch64_psci.S  aarch64_psci_cpu_off.c  aarch64_psci_cpu_on.c  psci_local.h
drivers/src/aarch64/stage2/: aarch64_stage2_activate.c  aarch64_stage2_descriptor.c  aarch64_stage2_dump_descriptor.c  aarch64_stage2_init.c  aarch64_stage2_initialize.c  aarch64_stage2_map.c  stage2_local.h
drivers/src/arm/gic400/: gic400.c  gic400_call_handler.c  gic400_dump_ns_cpuif.c  gic400_dump_ns_distributor.c  gic400_init.c  gic400_initialize.c  gic400_inject_virq.c  gic400_local.h  gic400_read_distributor.c  gic400_set_level.c  gic400_set_priority_mask.c  gic400_write_distributor.c
drivers/src/arm/smmu500/: s2cb  smmu500_allocate.c  smmu500_allocate_context.c  smmu500_allocate_context_bank.c  smmu500_allocate_context_banks.c  smmu500_allocate_s2_context_bank.c  smmu500_allocate_s2_context_banks.c  smmu500_allocate_stream_map.c  smmu500_allocate_stream_match_register.c  smmu500_attarch_stage2.c  smmu500_configure_context_bank_with_stage2.c  smmu500_configure_translation_stream.c  smmu500_create_context_bank_with_stage2.c  smmu500_create_translation_stream.c  smmu500_disable.c  smmu500_dump.c  smmu500_enable.c  smmu500_free_context_bank.c  smmu500_free_context_banks.c  smmu500_initialize.c  smmu500_local.h  smmu500_s2_cb_attach.c
drivers/src/xilinx/axi/: uart_lite.c
guest/: CMakeLists.txt  Makefile
guest/config/: memory.c  memory.lds  system.h
guest/src/: main.c
guest/src/boot/: init_processor_el1.S  start.S
guest/src/exception/: excvec_el1.S  handler_el1.c  handler_el2.c
guest/src/init/: init_hw.c  init_memory_map.c  init_system.c
guest/src/test/gic/: 01_dist_register.c  02_sgi.c  04_spi.c  05_spi_multi.c
guest/src/test/hvcs/: 01_asm.S
guest/src/test/insn/: 01_memory_access.S  01_parse_aarch64_ldr.S  03_parse_aarch64_ldr_literal.c
guest/src/test/smmu/: 01.c
guest/src/test/vspi/: 01.c  04.c  05.c  08.c  09.c  10.c  11.c  12.c  13.c  14.c  vspi.c  vspi.h
projects/hypervisor/: CMakeLists.txt
projects/hypervisor/inc/hypervisor/: hvc.h  mmu.h  parameter.h  soc.h  thread.h  vm.h  vpc.h  vpc_register.h
projects/hypervisor/src/exception/: excvec_hyp.S  handler_el2.c
projects/hypervisor/src/hvc/: hvc_local.h  hvc_match_service.c  hvc_server.c  hvc_service_append_slist.c  hvc_service_id.c  hvc_service_initialize.c  hvc_set_result.c
projects/hypervisor/src/mmu/: hyp_mmu_stage2_memory_type.c  hyp_mmu_stage2_shareability.c
projects/hypervisor/src/soc/: soc_default_test_executable_region.c  soc_initialize.c  soc_initialize_vpc.c
projects/hypervisor/src/test/: stage2.c
projects/hypervisor/src/thread/: thread_launch.c  thread_launch_self.c  thread_local.h  thread_parameter_array.c  thread_standby.S  thread_start.S  thread_terminate.S  tls.c
projects/hypervisor/src/vm/: vm_acquire_vpc.c  vm_initialize.c  vm_launch.c  vm_launch_secondary.c  vm_local.h  vm_proc_no.c  vm_register_region_trap.c  vm_register_vpc.c  vm_search_region_trap.c  vm_wakeup.c
projects/hypervisor/src/vpc/: vpc_call_event.c  vpc_ctx_fpu.S  vpc_ctx_sys.S  vpc_dump.c  vpc_emulate_aarch64_data_abort.c  vpc_emulate_exception.c  vpc_event_loop.c  vpc_initialize.c  vpc_is_aarch32.c  vpc_is_aarch64.c  vpc_launch.c  vpc_local.h  vpc_read_instruction.c  vpc_resume.c  vpc_send_event.c  vpc_set_boot_parameters.c  vpc_switch_to_el1.S  vpc_update_pc.c  vpc_va_to_pa_r.c  vpc_wait_request.c  vpc_wakeup_processor.c
projects/libs/: CMakeLists.txt  Makefile
projects/libs/inc/lib/: aarch64.h  asm.h  bit.h  bitmap.h  list.h  log.h  slist.h  system.h
projects/libs/sample/system/: init_printk.c
projects/libs/src/: list.c
projects/libs/src/aarch64/: aarch64_spin_lock.S  atomic.S
projects/libs/src/bitmap/: bitmap_clear.c  bitmap_local.h  bitmap_search0.c  bitmap_search_and_set.c  bitmap_set.c
projects/libs/src/log/: log_cformat.c  log_local.h  log_output_c.c  log_output_di.c  log_output_pads.c  log_output_prefix.c  log_output_s.c  log_output_string.c  log_output_unsigned_number.c
projects/libs/src/slist/: slist_append.c  slist_init.c  slist_search_element.c
projects/libs/src/system/: reg_write_sync.S  spin_lock.S  system_assert.S  system_errno.c  system_error.S  system_spin_lock.c  system_test_valid_stack_region.c
projects/zcu104-linux/: CMakeLists.txt  Makefile
projects/zcu104-linux/config/: memory.c  memory.lds  memory_asm.S  system.h
projects/zcu104-linux/src/: main.c
(+876 files in other folders)
